--- a/difftest/Makefile
+++ b/difftest/Makefile
@@ -24,6 +24,11 @@ SRCS = $(shell find . -name '*.cc') $(shell find . -name '*.h')
 SRCS += $(REPO_PATH)/spike_main/spike.cc
 CXXFLAGS = -O3 --std=c++17 -shared -fPIC -DNUM_CORES=$(NUM_CORES)
 
+ifneq ($(CONFIG_USE_SPARSEMM),)
+CXXFLAGS += -DCONFIG_USE_SPARSEMM
+$(warning "Use Sparse Ram, when make difftest, plase use: CONFIG_USE_SPARSEMM=1")
+endif
+
 ifneq ($(DEBUG),)
 CONFIGURE_FLAGS += --enable-commitlog
 CXXFLAGS += -DDIFFTEST_LOG_FILE=\"$(NOOP_HOME)/build/spike.log\"
